- MyBatis Dynamic SQL 1.4.0 버전업   https://github.com/mybatis/mybatis-dynamic-sql/releases/tag/mybatis-dynamic-sql-1.4.0
  컴파일 오류가 나서 코드 변경 필요 했음.
  BoardServiceImpl.java:[177,23]
  BoardServiceImpl.java:[188,15]
  관련해서 검색조건 List<SqlCriterion>으로 받던 것을 List<AndOrCriteriaGroup>으로 변경함.

  Where 조건을 정의하는데 있어서 더 쉽게 해주신 부분이 있는 것 같은데.. 당장 검색조건에 적용할 수 있을지 해깔린다.. 일단은 두고, 다음 챕터할 때 바꿔보자!

  https://mybatis.org/mybatis-dynamic-sql/docs/conditions.html#optional-conditions